# solapi-python

./: .gitignore  .ruff.toml  LICENSE  README.md  config-dist.ini  pyproject.toml  ruff.toml
examples/: README.md  all_in_one.py  message_list.py  send_naver.py
examples/balance/: get_balance.py
examples/group/: add_group_message.py  add_group_message_with_image.py  cancel_reservation_group.py  delete_group_info.py  delete_group_message.py  get_group_info.py  get_group_list.py  get_group_message.py  get_groups.py  send_group_message.py  set_reservation_group.py
examples/kakaotalk/: send_alimtalk.py  send_chingutalk.py
examples/kakaotalk_old_deprecated/: send_alimtalk.py  send_chingutalk.py
examples/messages/: get_messages.py
examples/naver/: send_naver.py
examples/rcs/: send_rcs_lms.py  send_rcs_mms.py  send_rcs_mms_m3.py  send_rcs_mms_m6.py  send_rcs_mms_s3.py  send_rcs_mms_s6.py  send_rcs_sms.py  send_rcs_tpl.py
examples/senderid/: README.md  active_numbers.py  create_number.py  get_active_numbers.py  request_voicecall.py  verify_token.py
examples/simple/: send_kakao_alimtalk.py  send_kakao_bms.py  send_many.py  send_mms.py  send_sms.py  send_sms_with_reservation.py  send_voice_message.py
examples/sms/: allow_duplicates.py  send_global_sms.py  send_lms.py  send_mms.py  send_sms.py  sms.py
examples/storage/: delete_image.py  get_image_info.py  get_image_list.py  upload_file.py  upload_image.py
examples/webhook/django_example/: README.md  db.sqlite3  pyproject.toml
examples/webhook/django_example/django_example/: settings.py  urls.py
examples/webhook/django_example/django_example/app/: example_controller.py  group_report_controller.py  single_report_controller.py
group/: add_group_message.py
lib/: message.py  storage.py
simple/: send_one_alimtalk.py  send_one_alimtalk_button.py  send_one_chingutalk.py  send_one_chingutalk_button.py  simple_message.py
solapi/: __init__.py  message_service.py
solapi/error/: MessageNotReceiveError.py
solapi/lib/: authenticator.py  fetcher.py  string_date_transfer.py
solapi/model/: __init__.py  fax.py  message.py  message_type.py
solapi/model/kakao/: kakao_button.py  kakao_option.py
solapi/model/naver/: naver_button.py  naver_option.py
solapi/model/rcs/: rcs_options.py
solapi/model/request/: __init__.py  message.py  send_message_request.py  storage.py
solapi/model/request/groups/: get_groups.py
solapi/model/request/kakao/: bms.py  kakao_option.py
solapi/model/request/messages/: get_messages.py
solapi/model/request/voice/: voice_option.py
solapi/model/response/: common_response.py  message.py  send_message_response.py  storage.py
solapi/model/response/balance/: get_balance.py
solapi/model/response/groups/: get_group_messages.py  get_groups.py
solapi/model/response/messages/: get_messages.py
solapi/model/response/webhook/: single_report.py
solapi/model/webhook/: group_report.py  single_report.py
solapi/requests/: request_confiog.py
solapi/requests/send/: send_request.py
solapi/responses/: common_response.py
solapi/responses/send/: send_repsonse.py
solapi/services/: message_service.py
src/examples/modules/: README.md  message_list.py
src/examples/modules/group/: add_group_message_with_image.py  cancel_reservation_group.py  create_group.py  delete_group_info.py  delete_group_message.py  get_group_info.py  get_group_list.py  get_group_message.py  (+2 more)
src/examples/scripts/: README.md
src/solapi/lib/: authenticator.py  fetcher.py  string_date_transfer.py
src/solapi/requests/: message_request.py  request_confiog.py
tests/: README.md  conftest.py  test_balance.py  test_group.py  test_messages.py  test_simple_send.py  test_storage.py
(+21 files in other folders)
