[project]
name = "django_example"
version = "0.1.0"
description = "Django example for SOLAPI webhook"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.0",
    "solapi"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
